# server_script

./: .gitignore  AGENTS.md  MANIFESTO.md  README.md  auto_update.sh  help.txt  install.py  install.sh  pyproject.toml  requirements.txt  server.py  setup.py  setup.sh  test_output.txt  test_simulation.sh  test_trap.sh
.github/workflows/: rust.yml
.jules/: bolt.md  sentinel.md
cyl_manager/: cli.py
cyl_manager/core/: config.py  database.py  docker.py  docker_manager.py  install_system.py  logger.py  proxy.py  registry.py  security.py  system.py  utils.py
cyl_manager/services/: __init__.py  base.py  cloud.py  core_services.py  database.py  downloaders.py  gitea.py  media.py  media_arr.py  media_services.py  misc.py  misc_services.py  monitoring.py  more_media_services.py  more_services.py  network.py  plex.py  portainer.py  proxy.py  web.py
cylae/: Cargo.toml  check_output.txt  check_output_2.txt
cylae/src/: main.rs
cylae/src/core/: docker.rs  firewall.rs  hardware.rs  mod.rs  secrets.rs  system.rs
cylae/src/services/: apps.rs  arr.rs  base.rs  download.rs  infra.rs  media.rs  mod.rs  plex.rs  registry.rs
cylae/src/services/media/: plex.rs
cylae/tests/: hardware_test.rs  integration_tests.rs
legacy/: requirements.txt
legacy/tests/: policy_check.sh  syntax_check.sh  test_all_services_config.py  test_cli.py  test_config.py  test_core.py  test_core_config.py  test_core_system.py  test_install.py  test_mail_optimization.py  test_services.py  test_stress_orchestrator.py  test_web.py  unit_tests.sh
legacy_src/lib/: config.sh  database.sh  docker.sh  install_system.sh  security.sh  utils.sh
legacy_src/services/: filebrowser.sh  ftp.sh  glpi.sh  mail.sh  netdata.sh  nextcloud.sh  uptimekuma.sh  yourls.sh
lib/: core.sh  services.sh  utils.sh
server_manager/: Cargo.toml
server_manager/benches/: config_benchmark.rs  service_benchmark.rs
server_manager/src/: lib.rs  main.rs  web.rs
server_manager/src/core/: compose.rs  config.rs  docker.rs  firewall.rs  hardware.rs  mod.rs  paths.rs  secrets.rs  system.rs  users.rs
server_manager/src/interface/: cli.rs  web.rs
server_manager/src/services/: apps.rs  arr.rs  download.rs  infra.rs  media.rs  mod.rs
server_manager/tests/: integration_tests.rs
src/: main.sh
src/cyl_manager/: cli.py
src/cylae/: cli.py
src/lib/: config.sh  core.sh  database.sh  docker.sh  install_system.sh  media.sh  proxy.sh  security.sh  utils.sh
src/services/: filebrowser.sh  ftp.sh  gitea.sh  glpi.sh  jackett.sh  mail.sh  netdata.sh  nextcloud.sh  overseerr.sh  plex.sh  (+10 more)
tests/: mock_test.sh  syntax_check.sh  test_architect.py  test_architecture_compliance.py  test_cli.py  test_cli_journey.py  test_config.py  test_core.py  test_core_docker.py  test_core_firewall.py  test_core_orchestrator.py  test_core_system.py  test_dnscrypt.py  test_extras.py  test_gdhd.py  test_gdhd_logic.py  test_gpu_logic.py  test_healthcheck.py  test_install.py  test_kernel_optimization.py  test_low_spec_optimization.py  test_nginx_config.sh  test_orchestrator.py  test_registry.py  test_services.py  test_services_base.py  test_services_integration.py  test_services_logic.py  test_system.py  test_ultimate_optimizations.py  test_unit.py  unit_tests.sh
(+49 files in other folders)
