[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cylae-manager"
version = "10.0.0"
description = "Cylae Server Manager - Python Edition"
authors = [{name = "Cylae", email = "dev@cyl.ae"}]
requires-python = ">=3.9"
dependencies = [
    "distro",
    "requests",
    "python-dotenv",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
cyl-manager = "cyl_manager.cli:main"
