[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyl-manager"
version = "2.1.0"
description = "A modular Python-based framework to deploy and manage a self-hosted media ecosystem."
authors = [{name = "Cylae"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
    "pydantic-settings",
    "docker",
    "PyYAML",
    "psutil",
    "distro",
    "python-dotenv"
]

[project.scripts]
cyl-manager = "cyl_manager.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--ignore=legacy"
