[package]
name = "cylae"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bollard = "0.20.0"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
nix = { version = "0.31.0", features = ["user"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["full"] }
which = "8.0.0"
