[package]
name = "server_manager"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
sysinfo = "0.29"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
which = "4.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
nix = { version = "0.27", features = ["user"] }
async-trait = "0.1"

[workspace]
members = ["."]
