[package]
name = "server_manager"
version = "1.0.8"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
sysinfo = "0.29"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
which = "4.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
nix = { version = "0.27", features = ["user"] }
async-trait = "0.1"
axum = "0.7"
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
bcrypt = "0.15"
tower-sessions = "0.12"
time = "0.3"
rand = "0.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "service_benchmark"
harness = false

[workspace]
members = ["."]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
